--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ReactGridGallery_custom-overlay {
+  pointer-events: auto !important;
+}
+
